Fix spotbugs warnings and gradle deprecated warnings